[package]
name = "plygui-webview"
version = "0.0.1"
authors = ["Serhii Plyhun <snuk188@gmail.com>"]
edition = "2018"

[lib]
name = "plygui_webview"
path = "src/lib.rs"

[dependencies]
lazy_static = "~1.4"
plygui-api = {version = "0.0.1", path = "../plygui/api"}
plygui-macros = {version = "0.0.1", path = "../plygui/macros"}

plygui-gtk = {version = "0.0.1", path = "../plygui-gtk", optional = true}
webkit2gtk = { version = "^2.0", optional = true }

plygui-qt = {version = "0.0.1", path = "../plygui-qt", optional = true}

[target.'cfg(target_os = "windows")'.dependencies]
plygui-win32 = {version = "0.0.1", path = "../plygui-win32", optional = true}
winapi = { version = "~0.3", features = ["windef", "minwindef", "winuser", "winbase", "commctrl", "errhandlingapi", "libloaderapi", "wingdi", "combaseapi", "imm", "oleauto"], optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
plygui-cocoa = { version = "0.0.1", path = "../plygui-cocoa", optional = true}
objc = {version = "~0.2", optional = true}

[features]
gtk3 = ["plygui-gtk","webkit2gtk"]
win32 = ["cc","plygui-win32","winapi"]
cocoa_ = ["plygui-cocoa","objc"]
qt5 = ["plygui-qt"]
default = []

[build-dependencies]
cc = { version = "~1.0", optional = true }